examples/test/testpolicy14443.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14443
  namespace: namespace250
spec:
  podSelector:
    matchLabels:
      key45: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value26
          key46: value18
      podSelector:
        matchLabels:
          key2: value21
          key31: value42
          key27: value25
